--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev":  "ts-node-dev --exit-child --poll --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --exit-child --poll --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -18,6 +18,7 @@
     "@prisma/client": "^3.13.0",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1"
   }
 }
